Fix : 리뷰 내용에 특수문자, 이모티콘 삭제

--- a/naver_review_크롤링.ipynb
+++ b/naver_review_크롤링.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,170 +29,28 @@
     "import requests\n",
     "from openpyxl import Workbook\n",
     "from bs4 import BeautifulSoup\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>검색어</th>\n",
-       "      <th>업태구분명</th>\n",
-       "      <th>사업장명</th>\n",
-       "      <th>사업장명_원본</th>\n",
-       "      <th>시도</th>\n",
-       "      <th>지역구</th>\n",
-       "      <th>상세주소</th>\n",
-       "      <th>소재지전체주소</th>\n",
-       "      <th>도로명전체주소</th>\n",
-       "      <th>좌표정보(x)</th>\n",
-       "      <th>좌표정보(y)</th>\n",
-       "      <th>검색여부</th>\n",
-       "      <th>영업상태명</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>8291</th>\n",
-       "      <td>도곡로 401, 간코</td>\n",
-       "      <td>일식</td>\n",
-       "      <td>간코</td>\n",
-       "      <td>간코 롯데백화점강남점</td>\n",
-       "      <td>서울특별시</td>\n",
-       "      <td>강남구</td>\n",
-       "      <td>도곡로 401,</td>\n",
-       "      <td>서울특별시 강남구 대치동 937 롯데백화점</td>\n",
-       "      <td>서울특별시 강남구 도곡로 401, 롯데백화점 지하1층 (대치동)</td>\n",
-       "      <td>204669.543367</td>\n",
-       "      <td>443873.621189</td>\n",
-       "      <td>가능</td>\n",
-       "      <td>영업/정상</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8292</th>\n",
-       "      <td>압구정로 108, 오토김밥</td>\n",
-       "      <td>분식</td>\n",
-       "      <td>오토김밥</td>\n",
-       "      <td>오토김밥 신사점</td>\n",
-       "      <td>서울특별시</td>\n",
-       "      <td>강남구</td>\n",
-       "      <td>압구정로 108,</td>\n",
-       "      <td>서울특별시 강남구 신사동 528-3 덕산빌딩</td>\n",
-       "      <td>서울특별시 강남구 압구정로 108, 덕산빌딩 지상1층 10호 (신사동)</td>\n",
-       "      <td>201749.456414</td>\n",
-       "      <td>446742.828124</td>\n",
-       "      <td>가능</td>\n",
-       "      <td>영업/정상</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8293</th>\n",
-       "      <td>압구정로42길 36, 마들마들</td>\n",
-       "      <td>한식</td>\n",
-       "      <td>마들마들</td>\n",
-       "      <td>마들마들</td>\n",
-       "      <td>서울특별시</td>\n",
-       "      <td>강남구</td>\n",
-       "      <td>압구정로42길 36,</td>\n",
-       "      <td>서울특별시 강남구 신사동 635-14 금광아크존1</td>\n",
-       "      <td>서울특별시 강남구 압구정로42길 36, 지상1층 101호 (신사동, 금광아크존1)</td>\n",
-       "      <td>202990.870783</td>\n",
-       "      <td>447146.555568</td>\n",
-       "      <td>가능</td>\n",
-       "      <td>영업/정상</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8294</th>\n",
-       "      <td>언주로151길 21, 세바</td>\n",
-       "      <td>경양식</td>\n",
-       "      <td>세바</td>\n",
-       "      <td>세바(Sevva)</td>\n",
-       "      <td>서울특별시</td>\n",
-       "      <td>강남구</td>\n",
-       "      <td>언주로151길 21,</td>\n",
-       "      <td>서울특별시 강남구 신사동 629-1</td>\n",
-       "      <td>서울특별시 강남구 언주로151길 21, 지상1층 (신사동)</td>\n",
-       "      <td>202731.421127</td>\n",
-       "      <td>446609.460134</td>\n",
-       "      <td>가능</td>\n",
-       "      <td>영업/정상</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8295</th>\n",
-       "      <td>논현로161길 37, 구구구</td>\n",
-       "      <td>경양식</td>\n",
-       "      <td>구구구</td>\n",
-       "      <td>구구구 (GOOGOOGOO)</td>\n",
-       "      <td>서울특별시</td>\n",
-       "      <td>강남구</td>\n",
-       "      <td>논현로161길 37,</td>\n",
-       "      <td>서울특별시 강남구 신사동 552-5</td>\n",
-       "      <td>서울특별시 강남구 논현로161길 37, 동쪽 지상1층 (신사동)</td>\n",
-       "      <td>202153.410454</td>\n",
-       "      <td>446748.562578</td>\n",
-       "      <td>가능</td>\n",
-       "      <td>영업/정상</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   검색어 업태구분명  사업장명          사업장명_원본     시도  지역구         상세주소  \\\n",
-       "8291       도곡로 401, 간코    일식    간코      간코 롯데백화점강남점  서울특별시  강남구     도곡로 401,   \n",
-       "8292    압구정로 108, 오토김밥    분식  오토김밥         오토김밥 신사점  서울특별시  강남구    압구정로 108,   \n",
-       "8293  압구정로42길 36, 마들마들    한식  마들마들             마들마들  서울특별시  강남구  압구정로42길 36,   \n",
-       "8294    언주로151길 21, 세바   경양식    세바        세바(Sevva)  서울특별시  강남구  언주로151길 21,   \n",
-       "8295  논현로161길 37, 구구구    경양식  구구구   구구구 (GOOGOOGOO)  서울특별시  강남구  논현로161길 37,   \n",
-       "\n",
-       "                          소재지전체주소  \\\n",
-       "8291      서울특별시 강남구 대치동 937 롯데백화점   \n",
-       "8292     서울특별시 강남구 신사동 528-3 덕산빌딩   \n",
-       "8293  서울특별시 강남구 신사동 635-14 금광아크존1   \n",
-       "8294          서울특별시 강남구 신사동 629-1   \n",
-       "8295          서울특별시 강남구 신사동 552-5   \n",
-       "\n",
-       "                                            도로명전체주소        좌표정보(x)  \\\n",
-       "8291            서울특별시 강남구 도곡로 401, 롯데백화점 지하1층 (대치동)  204669.543367   \n",
-       "8292        서울특별시 강남구 압구정로 108, 덕산빌딩 지상1층 10호 (신사동)  201749.456414   \n",
-       "8293  서울특별시 강남구 압구정로42길 36, 지상1층 101호 (신사동, 금광아크존1)  202990.870783   \n",
-       "8294               서울특별시 강남구 언주로151길 21, 지상1층 (신사동)  202731.421127   \n",
-       "8295            서울특별시 강남구 논현로161길 37, 동쪽 지상1층 (신사동)  202153.410454   \n",
-       "\n",
-       "            좌표정보(y) 검색여부  영업상태명  \n",
-       "8291  443873.621189   가능  영업/정상  \n",
-       "8292  446742.828124   가능  영업/정상  \n",
-       "8293  447146.555568   가능  영업/정상  \n",
-       "8294  446609.460134   가능  영업/정상  \n",
-       "8295  446748.562578   가능  영업/정상  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# 정규 표현식으로 이모티콘, 특수문자 제거 (단, ?와 !는 제외)\n",
+    "def remove_special_characters(text):\n",
+    "    pattern = r'[^\\w\\s!?]|_'\n",
+    "    result = re.sub(pattern, '', text)\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# 데이터 불러오기\n",
     "original_res_df = pd.read_excel('combined_file.xlsx')\n",
@@ -217,105 +75,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>검색어</th>\n",
-       "      <th>업태구분명</th>\n",
-       "      <th>사업장명</th>\n",
-       "      <th>사업장명_원본</th>\n",
-       "      <th>시도</th>\n",
-       "      <th>지역구</th>\n",
-       "      <th>상세주소</th>\n",
-       "      <th>소재지전체주소</th>\n",
-       "      <th>도로명전체주소</th>\n",
-       "      <th>좌표정보(x)</th>\n",
-       "      <th>좌표정보(y)</th>\n",
-       "      <th>검색여부</th>\n",
-       "      <th>영업상태명</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>강남대로114길 18, 정식당</td>\n",
-       "      <td>한식</td>\n",
-       "      <td>정식당</td>\n",
-       "      <td>정식당</td>\n",
-       "      <td>서울특별시</td>\n",
-       "      <td>강남구</td>\n",
-       "      <td>강남대로114길 18,</td>\n",
-       "      <td>서울특별시 강남구 논현동 198-9</td>\n",
-       "      <td>서울특별시 강남구 강남대로114길 18, 지상1층 102호 (논현동)</td>\n",
-       "      <td>202203.971845</td>\n",
-       "      <td>444853.761458</td>\n",
-       "      <td>가능</td>\n",
-       "      <td>영업/정상</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>강남대로 378, 채선당 샤브보트</td>\n",
-       "      <td>한식</td>\n",
-       "      <td>채선당 샤브보트</td>\n",
-       "      <td>채선당 샤브보트 강남역점</td>\n",
-       "      <td>서울특별시</td>\n",
-       "      <td>강남구</td>\n",
-       "      <td>강남대로 378,</td>\n",
-       "      <td>서울특별시 강남구 역삼동 825-9 준빌딩</td>\n",
-       "      <td>서울특별시 강남구 강남대로 378, 준빌딩 지상1층 (역삼동)</td>\n",
-       "      <td>202462.794327</td>\n",
-       "      <td>443827.961945</td>\n",
-       "      <td>가능</td>\n",
-       "      <td>영업/정상</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  검색어 업태구분명      사업장명        사업장명_원본     시도  지역구  \\\n",
-       "0    강남대로114길 18, 정식당    한식       정식당            정식당  서울특별시  강남구   \n",
-       "1  강남대로 378, 채선당 샤브보트    한식  채선당 샤브보트  채선당 샤브보트 강남역점  서울특별시  강남구   \n",
-       "\n",
-       "           상세주소                  소재지전체주소  \\\n",
-       "0  강남대로114길 18,      서울특별시 강남구 논현동 198-9   \n",
-       "1     강남대로 378,  서울특별시 강남구 역삼동 825-9 준빌딩   \n",
-       "\n",
-       "                                  도로명전체주소        좌표정보(x)        좌표정보(y) 검색여부  \\\n",
-       "0  서울특별시 강남구 강남대로114길 18, 지상1층 102호 (논현동)  202203.971845  444853.761458   가능   \n",
-       "1      서울특별시 강남구 강남대로 378, 준빌딩 지상1층 (역삼동)  202462.794327  443827.961945   가능   \n",
-       "\n",
-       "   영업상태명  \n",
-       "0  영업/정상  \n",
-       "1  영업/정상  "
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "start_num = 0 # 할 차례\n",
     "num = 2\n",
@@ -334,191 +96,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>검색어</th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>review</th>\n",
-       "      <th>date</th>\n",
-       "      <th>revisit</th>\n",
-       "      <th>tag</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>강남대로114길 18, 정식당</td>\n",
-       "      <td>hsy****</td>\n",
-       "      <td>친구랑 어디갈까 고민하다 오게됬어요~ 근데 사진엔 없지만 불고기 진짜 미쳤구요.. ...</td>\n",
-       "      <td>2.29.목</td>\n",
-       "      <td>1</td>\n",
-       "      <td>음식이 맛있어요</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>강남대로114길 18, 정식당</td>\n",
-       "      <td>arias7932</td>\n",
-       "      <td>신논현 찐 맛집!!~오픈한지 얼마 안되었다기에 여자3명이 방문~요즘 물가가 많이 올...</td>\n",
-       "      <td>1.29.월</td>\n",
-       "      <td>1</td>\n",
-       "      <td>음식이 맛있어요</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>강남대로114길 18, 정식당</td>\n",
-       "      <td>퍼플리보</td>\n",
-       "      <td>지인 추천으로 가게된 정식당 메뉴 보고 꽃게탕과 불고기 껍데기 시켰는데 진짜…하나하...</td>\n",
-       "      <td>2.29.목</td>\n",
-       "      <td>1</td>\n",
-       "      <td>음식이 맛있어요</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>강남대로114길 18, 정식당</td>\n",
-       "      <td>푸리타</td>\n",
-       "      <td>친구소개로 2차로 들렸는데\\n메뉴가 다 맛있어서\\n다이어트 실패했어요 😱\\n돼지껍데...</td>\n",
-       "      <td>1.31.수</td>\n",
-       "      <td>1</td>\n",
-       "      <td>음식이 맛있어요</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>강남대로114길 18, 정식당</td>\n",
-       "      <td>행복한오늘14</td>\n",
-       "      <td>회사근처여서 우연히 들렸는데 찐맛집을 발견했네요~ 고급스런 한정식집에서 파는것 같은...</td>\n",
-       "      <td>1.27.토</td>\n",
-       "      <td>1</td>\n",
-       "      <td>친절해요</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>60</th>\n",
-       "      <td>강남대로 378, 채선당 샤브보트</td>\n",
-       "      <td>고호정말좋아</td>\n",
-       "      <td>맛있어요</td>\n",
-       "      <td>23.12.22.금</td>\n",
-       "      <td>1</td>\n",
-       "      <td>음식이 맛있어요</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>61</th>\n",
-       "      <td>강남대로 378, 채선당 샤브보트</td>\n",
-       "      <td>리우리우72</td>\n",
-       "      <td></td>\n",
-       "      <td>23.2.26.일</td>\n",
-       "      <td>1</td>\n",
-       "      <td>음식이 맛있어요</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>62</th>\n",
-       "      <td>강남대로 378, 채선당 샤브보트</td>\n",
-       "      <td>조시파이</td>\n",
-       "      <td>비오는날 아주 좋았어요</td>\n",
-       "      <td>2.22.목</td>\n",
-       "      <td>1</td>\n",
-       "      <td>음식이 맛있어요</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>63</th>\n",
-       "      <td>강남대로 378, 채선당 샤브보트</td>\n",
-       "      <td>와엠플로</td>\n",
-       "      <td>추운 날씨에 따끈하게 맛나게 잘 먹고 갑니다. 후기들에 불친절 등 얘기 많던데, 우...</td>\n",
-       "      <td>1.22.월</td>\n",
-       "      <td>1</td>\n",
-       "      <td>재료가 신선해요</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>64</th>\n",
-       "      <td>강남대로 378, 채선당 샤브보트</td>\n",
-       "      <td>쫑이28</td>\n",
-       "      <td>음식 깔끔하고 양도 적당히 괜찮았어요!</td>\n",
-       "      <td>23.11.30.목</td>\n",
-       "      <td>1</td>\n",
-       "      <td>음식이 맛있어요</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>65 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   검색어    user_id  \\\n",
-       "0     강남대로114길 18, 정식당    hsy****   \n",
-       "1     강남대로114길 18, 정식당  arias7932   \n",
-       "2     강남대로114길 18, 정식당       퍼플리보   \n",
-       "3     강남대로114길 18, 정식당        푸리타   \n",
-       "4     강남대로114길 18, 정식당    행복한오늘14   \n",
-       "..                 ...        ...   \n",
-       "60  강남대로 378, 채선당 샤브보트     고호정말좋아   \n",
-       "61  강남대로 378, 채선당 샤브보트     리우리우72   \n",
-       "62  강남대로 378, 채선당 샤브보트       조시파이   \n",
-       "63  강남대로 378, 채선당 샤브보트       와엠플로   \n",
-       "64  강남대로 378, 채선당 샤브보트       쫑이28   \n",
-       "\n",
-       "                                               review        date revisit  \\\n",
-       "0   친구랑 어디갈까 고민하다 오게됬어요~ 근데 사진엔 없지만 불고기 진짜 미쳤구요.. ...      2.29.목       1   \n",
-       "1   신논현 찐 맛집!!~오픈한지 얼마 안되었다기에 여자3명이 방문~요즘 물가가 많이 올...      1.29.월       1   \n",
-       "2   지인 추천으로 가게된 정식당 메뉴 보고 꽃게탕과 불고기 껍데기 시켰는데 진짜…하나하...      2.29.목       1   \n",
-       "3   친구소개로 2차로 들렸는데\\n메뉴가 다 맛있어서\\n다이어트 실패했어요 😱\\n돼지껍데...      1.31.수       1   \n",
-       "4   회사근처여서 우연히 들렸는데 찐맛집을 발견했네요~ 고급스런 한정식집에서 파는것 같은...      1.27.토       1   \n",
-       "..                                                ...         ...     ...   \n",
-       "60                                               맛있어요  23.12.22.금       1   \n",
-       "61                                                      23.2.26.일       1   \n",
-       "62                                       비오는날 아주 좋았어요      2.22.목       1   \n",
-       "63  추운 날씨에 따끈하게 맛나게 잘 먹고 갑니다. 후기들에 불친절 등 얘기 많던데, 우...      1.22.월       1   \n",
-       "64                              음식 깔끔하고 양도 적당히 괜찮았어요!  23.11.30.목       1   \n",
-       "\n",
-       "         tag  \n",
-       "0   음식이 맛있어요  \n",
-       "1   음식이 맛있어요  \n",
-       "2   음식이 맛있어요  \n",
-       "3   음식이 맛있어요  \n",
-       "4       친절해요  \n",
-       "..       ...  \n",
-       "60  음식이 맛있어요  \n",
-       "61  음식이 맛있어요  \n",
-       "62  음식이 맛있어요  \n",
-       "63  재료가 신선해요  \n",
-       "64  음식이 맛있어요  \n",
-       "\n",
-       "[65 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 빈 리스트 생성\n",
     "user_id_list = []\n",
@@ -656,7 +236,7 @@
     "            review_category_name_list.append(tag_text)\n",
     "            date_list.append(date_text)\n",
     "            revisit_list.append(revisit_text)\n",
-    "            content_list.append(content_text)\n",
+    "            content_list.append(remove_special_characters(content_text))\n",
     "\n",
     "    except Exception as e:\n",
     "        print(e)\n",
@@ -680,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,12 +269,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# review_result_df.to_excel('.data/음식점_리뷰데이터.xlsx')\n",
     "# tag_result_df.to_excel('.data/음식점_태그데이터.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "def remove_special_characters(text):\n",
+    "    # 정규 표현식으로 이모티콘, 특수문자, 아스키코드 제거 (단, ?와 !는 제외)\n",
+    "    pattern = r'[^\\w\\s!?]|_'\n",
+    "    result = re.sub(pattern, '', text)\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "text = \"Hello, World! 😊 How are you today??????!!!? #Python\"\n",
+    "result = remove_special_characters(text)\n",
+    "print(result)"
    ]
   }
  ],
