Fix : 리뷰 내용 중 특수문자, 이모티콘 삭제 함수 추가

--- a/naver_user_크롤링.ipynb
+++ b/naver_user_크롤링.ipynb
@@ -72,12 +72,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 정규 표현식으로 이모티콘, 특수문자, 아스키코드 제거\n",
+    "def remove_special_characters(text):\n",
+    "    pattern = r'[^\\w\\s]|_'\n",
+    "    result = re.sub(pattern, '', text)\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
     "# User의 아이디, 리뷰수, 팔로워, url을 가져오는 함수 \n",
-    "# User의 아이디, 리뷰수, 팔로워, url을 가져오는 함수 \n",
+    "\n",
     "def user_profile(url) :\n",
     "    # 주소 이동\n",
     "\n",
@@ -666,7 +679,8 @@
     "\n",
     "                    review_elements = reviews_elements.find_elements(By.CLASS_NAME,'z0t_8b')\n",
     "                    try : \n",
-    "                        review_text = review_elements[0].text # 리뷰 본문          \n",
+    "                        review_text = review_elements[0].text # 리뷰 본문      \n",
+    "                        review_text = remove_special_characters(review_text)\n",
     "                        sub_info_elements = reviews_elements.find_elements(By.CLASS_NAME,'_1tkuel') # 세부정보\n",
     "                        sub_info = sub_info_elements[0].text if sub_info_elements else None\n",
     "                    except :\n",
