--- a/data/restaurant_info_data(2)/res_div.ipynb
+++ b/data/restaurant_info_data(2)/res_div.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,388 +13,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>검색어</th>\n",
-       "      <th>업태구분명</th>\n",
-       "      <th>사업장명</th>\n",
-       "      <th>사업장명_원본</th>\n",
-       "      <th>시도</th>\n",
-       "      <th>지역구</th>\n",
-       "      <th>상세주소</th>\n",
-       "      <th>소재지전체주소</th>\n",
-       "      <th>도로명전체주소</th>\n",
-       "      <th>좌표정보(x)</th>\n",
-       "      <th>좌표정보(y)</th>\n",
-       "      <th>검색여부</th>\n",
-       "      <th>영업상태명</th>\n",
-       "      <th>데이터기준일</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>8291</th>\n",
-       "      <td>도곡로 401, 간코</td>\n",
-       "      <td>일식</td>\n",
-       "      <td>간코</td>\n",
-       "      <td>간코 롯데백화점강남점</td>\n",
-       "      <td>서울특별시</td>\n",
-       "      <td>강남구</td>\n",
-       "      <td>도곡로 401,</td>\n",
-       "      <td>서울특별시 강남구 대치동 937 롯데백화점</td>\n",
-       "      <td>서울특별시 강남구 도곡로 401, 롯데백화점 지하1층 (대치동)</td>\n",
-       "      <td>204669.543367</td>\n",
-       "      <td>443873.621189</td>\n",
-       "      <td>가능</td>\n",
-       "      <td>영업/정상</td>\n",
-       "      <td>2024-02-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8292</th>\n",
-       "      <td>압구정로 108, 오토김밥</td>\n",
-       "      <td>분식</td>\n",
-       "      <td>오토김밥</td>\n",
-       "      <td>오토김밥 신사점</td>\n",
-       "      <td>서울특별시</td>\n",
-       "      <td>강남구</td>\n",
-       "      <td>압구정로 108,</td>\n",
-       "      <td>서울특별시 강남구 신사동 528-3 덕산빌딩</td>\n",
-       "      <td>서울특별시 강남구 압구정로 108, 덕산빌딩 지상1층 10호 (신사동)</td>\n",
-       "      <td>201749.456414</td>\n",
-       "      <td>446742.828124</td>\n",
-       "      <td>가능</td>\n",
-       "      <td>영업/정상</td>\n",
-       "      <td>2024-02-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8293</th>\n",
-       "      <td>압구정로42길 36, 마들마들</td>\n",
-       "      <td>한식</td>\n",
-       "      <td>마들마들</td>\n",
-       "      <td>마들마들</td>\n",
-       "      <td>서울특별시</td>\n",
-       "      <td>강남구</td>\n",
-       "      <td>압구정로42길 36,</td>\n",
-       "      <td>서울특별시 강남구 신사동 635-14 금광아크존1</td>\n",
-       "      <td>서울특별시 강남구 압구정로42길 36, 지상1층 101호 (신사동, 금광아크존1)</td>\n",
-       "      <td>202990.870783</td>\n",
-       "      <td>447146.555568</td>\n",
-       "      <td>가능</td>\n",
-       "      <td>영업/정상</td>\n",
-       "      <td>2024-02-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8294</th>\n",
-       "      <td>언주로151길 21, 세바</td>\n",
-       "      <td>경양식</td>\n",
-       "      <td>세바</td>\n",
-       "      <td>세바(Sevva)</td>\n",
-       "      <td>서울특별시</td>\n",
-       "      <td>강남구</td>\n",
-       "      <td>언주로151길 21,</td>\n",
-       "      <td>서울특별시 강남구 신사동 629-1</td>\n",
-       "      <td>서울특별시 강남구 언주로151길 21, 지상1층 (신사동)</td>\n",
-       "      <td>202731.421127</td>\n",
-       "      <td>446609.460134</td>\n",
-       "      <td>가능</td>\n",
-       "      <td>영업/정상</td>\n",
-       "      <td>2024-02-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8295</th>\n",
-       "      <td>논현로161길 37, 구구구</td>\n",
-       "      <td>경양식</td>\n",
-       "      <td>구구구</td>\n",
-       "      <td>구구구 (GOOGOOGOO)</td>\n",
-       "      <td>서울특별시</td>\n",
-       "      <td>강남구</td>\n",
-       "      <td>논현로161길 37,</td>\n",
-       "      <td>서울특별시 강남구 신사동 552-5</td>\n",
-       "      <td>서울특별시 강남구 논현로161길 37, 동쪽 지상1층 (신사동)</td>\n",
-       "      <td>202153.410454</td>\n",
-       "      <td>446748.562578</td>\n",
-       "      <td>가능</td>\n",
-       "      <td>영업/정상</td>\n",
-       "      <td>2024-02-01</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   검색어 업태구분명  사업장명          사업장명_원본     시도  지역구         상세주소  \\\n",
-       "8291       도곡로 401, 간코    일식    간코      간코 롯데백화점강남점  서울특별시  강남구     도곡로 401,   \n",
-       "8292    압구정로 108, 오토김밥    분식  오토김밥         오토김밥 신사점  서울특별시  강남구    압구정로 108,   \n",
-       "8293  압구정로42길 36, 마들마들    한식  마들마들             마들마들  서울특별시  강남구  압구정로42길 36,   \n",
-       "8294    언주로151길 21, 세바   경양식    세바        세바(Sevva)  서울특별시  강남구  언주로151길 21,   \n",
-       "8295  논현로161길 37, 구구구    경양식  구구구   구구구 (GOOGOOGOO)  서울특별시  강남구  논현로161길 37,   \n",
-       "\n",
-       "                          소재지전체주소  \\\n",
-       "8291      서울특별시 강남구 대치동 937 롯데백화점   \n",
-       "8292     서울특별시 강남구 신사동 528-3 덕산빌딩   \n",
-       "8293  서울특별시 강남구 신사동 635-14 금광아크존1   \n",
-       "8294          서울특별시 강남구 신사동 629-1   \n",
-       "8295          서울특별시 강남구 신사동 552-5   \n",
-       "\n",
-       "                                            도로명전체주소        좌표정보(x)  \\\n",
-       "8291            서울특별시 강남구 도곡로 401, 롯데백화점 지하1층 (대치동)  204669.543367   \n",
-       "8292        서울특별시 강남구 압구정로 108, 덕산빌딩 지상1층 10호 (신사동)  201749.456414   \n",
-       "8293  서울특별시 강남구 압구정로42길 36, 지상1층 101호 (신사동, 금광아크존1)  202990.870783   \n",
-       "8294               서울특별시 강남구 언주로151길 21, 지상1층 (신사동)  202731.421127   \n",
-       "8295            서울특별시 강남구 논현로161길 37, 동쪽 지상1층 (신사동)  202153.410454   \n",
-       "\n",
-       "            좌표정보(y) 검색여부  영업상태명      데이터기준일  \n",
-       "8291  443873.621189   가능  영업/정상  2024-02-01  \n",
-       "8292  446742.828124   가능  영업/정상  2024-02-01  \n",
-       "8293  447146.555568   가능  영업/정상  2024-02-01  \n",
-       "8294  446609.460134   가능  영업/정상  2024-02-01  \n",
-       "8295  446748.562578   가능  영업/정상  2024-02-01  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 데이터 불러오기\n",
-    "original_res_df = pd.read_excel('combined_file.xlsx')\n",
-    "res_df = original_res_df.copy()\n",
-    "res_df = res_df.loc[res_df['검색여부'] == '가능'].reset_index(drop=True)\n",
-    "res_df.drop('Unnamed: 0', axis=1, inplace=True)\n",
-    "\n",
-    "\n",
-    "# 컬럼 순서 바꾸기 -> 보기 좋으라고 바꿈\n",
-    "res_df['데이터기준일'] = '2024-02-01'\n",
-    "res_df['검색어'] = res_df['상세주소'] + \" \" + res_df['사업장명']\n",
-    "column_order = ['검색어', '업태구분명', '사업장명', '사업장명_원본', '시도', '지역구', '상세주소', '소재지전체주소', '도로명전체주소', '좌표정보(x)', '좌표정보(y)', '검색여부', '영업상태명','데이터기준일']\n",
-    "res_df = res_df[column_order]\n",
-    "res_df.tail()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "div = len(res_df)//4\n",
+    "# # 데이터 불러오기\n",
+    "# original_res_df = pd.read_excel('combined_file.xlsx')\n",
+    "# res_df = original_res_df.copy()\n",
+    "# res_df = res_df.loc[res_df['검색여부'] == '가능'].reset_index(drop=True)\n",
+    "# res_df.drop('Unnamed: 0', axis=1, inplace=True)\n",
     "\n",
-    "지은 = res_df[:div].reset_index(drop=True)\n",
-    "정훈 = res_df[div:div*2].reset_index(drop=True)\n",
-    "해민 = res_df[div*2:div*3].reset_index(drop=True)\n",
-    "지선 = res_df[div*3:].reset_index(drop=True)\n",
     "\n",
-    "지은['담당자'] = '지은'\n",
-    "정훈['담당자'] = '정훈'\n",
-    "해민['담당자'] = '해민'\n",
-    "지선['담당자'] = '지선'\n"
+    "# # 컬럼 순서 바꾸기 -> 보기 좋으라고 바꿈\n",
+    "# res_df['데이터기준일'] = '2024-02-01'\n",
+    "# res_df['검색어'] = res_df['상세주소'] + \" \" + res_df['사업장명']\n",
+    "# column_order = ['검색어', '업태구분명', '사업장명', '사업장명_원본', '시도', '지역구', '상세주소', '소재지전체주소', '도로명전체주소', '좌표정보(x)', '좌표정보(y)', '검색여부', '영업상태명','데이터기준일']\n",
+    "# res_df = res_df[column_order]\n",
+    "# res_df.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>검색어</th>\n",
-       "      <th>업태구분명</th>\n",
-       "      <th>사업장명</th>\n",
-       "      <th>사업장명_원본</th>\n",
-       "      <th>시도</th>\n",
-       "      <th>지역구</th>\n",
-       "      <th>상세주소</th>\n",
-       "      <th>소재지전체주소</th>\n",
-       "      <th>도로명전체주소</th>\n",
-       "      <th>좌표정보(x)</th>\n",
-       "      <th>좌표정보(y)</th>\n",
-       "      <th>검색여부</th>\n",
-       "      <th>영업상태명</th>\n",
-       "      <th>데이터기준일</th>\n",
-       "      <th>담당자</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>언주로134길 29, 팔당푸드</td>\n",
-       "      <td>김밥(도시락)</td>\n",
-       "      <td>팔당푸드</td>\n",
-       "      <td>팔당푸드</td>\n",
-       "      <td>서울특별시</td>\n",
-       "      <td>강남구</td>\n",
-       "      <td>언주로134길 29,</td>\n",
-       "      <td>서울특별시 강남구 논현동 113-25번지</td>\n",
-       "      <td>서울특별시 강남구 언주로134길 29, 지상1층 (논현동)</td>\n",
-       "      <td>203282.682258</td>\n",
-       "      <td>446099.498941</td>\n",
-       "      <td>가능</td>\n",
-       "      <td>영업/정상</td>\n",
-       "      <td>2024-02-01</td>\n",
-       "      <td>지선</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>테헤란로 517, 나의가야</td>\n",
-       "      <td>한식</td>\n",
-       "      <td>나의가야</td>\n",
-       "      <td>나의가야</td>\n",
-       "      <td>서울특별시</td>\n",
-       "      <td>강남구</td>\n",
-       "      <td>테헤란로 517,</td>\n",
-       "      <td>서울특별시 강남구 삼성동 159-7번지 현대백화점</td>\n",
-       "      <td>서울특별시 강남구 테헤란로 517, 현대백화점 지상10층 (삼성동)</td>\n",
-       "      <td>205210.358779</td>\n",
-       "      <td>445154.422252</td>\n",
-       "      <td>가능</td>\n",
-       "      <td>영업/정상</td>\n",
-       "      <td>2024-02-01</td>\n",
-       "      <td>지선</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>도산대로75길 26, 청담99</td>\n",
-       "      <td>한식</td>\n",
-       "      <td>청담99</td>\n",
-       "      <td>청담99</td>\n",
-       "      <td>서울특별시</td>\n",
-       "      <td>강남구</td>\n",
-       "      <td>도산대로75길 26,</td>\n",
-       "      <td>서울특별시 강남구 청담동 99-3번지</td>\n",
-       "      <td>서울특별시 강남구 도산대로75길 26, 4층 (청담동, 가당빌딩)</td>\n",
-       "      <td>203955.505490</td>\n",
-       "      <td>447076.943748</td>\n",
-       "      <td>가능</td>\n",
-       "      <td>영업/정상</td>\n",
-       "      <td>2024-02-01</td>\n",
-       "      <td>지선</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>압구정로50길 5-12 빛나주</td>\n",
-       "      <td>경양식</td>\n",
-       "      <td>빛나주</td>\n",
-       "      <td>빛나주</td>\n",
-       "      <td>서울특별시</td>\n",
-       "      <td>강남구</td>\n",
-       "      <td>압구정로50길 5-12</td>\n",
-       "      <td>서울특별시 강남구 신사동 661-10 지하1층</td>\n",
-       "      <td>서울특별시 강남구 압구정로50길 5-12 (신사동,지하1층)</td>\n",
-       "      <td>203405.290504</td>\n",
-       "      <td>447261.135628</td>\n",
-       "      <td>가능</td>\n",
-       "      <td>영업/정상</td>\n",
-       "      <td>2024-02-01</td>\n",
-       "      <td>지선</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>개포로22길 10 서연옥</td>\n",
-       "      <td>경양식</td>\n",
-       "      <td>서연옥</td>\n",
-       "      <td>서연옥</td>\n",
-       "      <td>서울특별시</td>\n",
-       "      <td>강남구</td>\n",
-       "      <td>개포로22길 10</td>\n",
-       "      <td>서울특별시 강남구 개포동 1231-4번지 지상1층</td>\n",
-       "      <td>서울특별시 강남구 개포로22길 10 (개포동,지상1층)</td>\n",
-       "      <td>204151.555648</td>\n",
-       "      <td>441769.083699</td>\n",
-       "      <td>가능</td>\n",
-       "      <td>영업/정상</td>\n",
-       "      <td>2024-02-01</td>\n",
-       "      <td>지선</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                검색어    업태구분명  사업장명 사업장명_원본     시도  지역구          상세주소  \\\n",
-       "0  언주로134길 29, 팔당푸드  김밥(도시락)  팔당푸드    팔당푸드  서울특별시  강남구   언주로134길 29,   \n",
-       "1    테헤란로 517, 나의가야       한식  나의가야    나의가야  서울특별시  강남구     테헤란로 517,   \n",
-       "2  도산대로75길 26, 청담99       한식  청담99    청담99  서울특별시  강남구   도산대로75길 26,   \n",
-       "3  압구정로50길 5-12 빛나주      경양식   빛나주     빛나주  서울특별시  강남구  압구정로50길 5-12   \n",
-       "4     개포로22길 10 서연옥      경양식   서연옥     서연옥  서울특별시  강남구     개포로22길 10   \n",
-       "\n",
-       "                       소재지전체주소                                도로명전체주소  \\\n",
-       "0       서울특별시 강남구 논현동 113-25번지       서울특별시 강남구 언주로134길 29, 지상1층 (논현동)   \n",
-       "1  서울특별시 강남구 삼성동 159-7번지 현대백화점  서울특별시 강남구 테헤란로 517, 현대백화점 지상10층 (삼성동)   \n",
-       "2         서울특별시 강남구 청담동 99-3번지   서울특별시 강남구 도산대로75길 26, 4층 (청담동, 가당빌딩)   \n",
-       "3    서울특별시 강남구 신사동 661-10 지하1층      서울특별시 강남구 압구정로50길 5-12 (신사동,지하1층)   \n",
-       "4  서울특별시 강남구 개포동 1231-4번지 지상1층         서울특별시 강남구 개포로22길 10 (개포동,지상1층)   \n",
-       "\n",
-       "         좌표정보(x)        좌표정보(y) 검색여부  영업상태명      데이터기준일 담당자  \n",
-       "0  203282.682258  446099.498941   가능  영업/정상  2024-02-01  지선  \n",
-       "1  205210.358779  445154.422252   가능  영업/정상  2024-02-01  지선  \n",
-       "2  203955.505490  447076.943748   가능  영업/정상  2024-02-01  지선  \n",
-       "3  203405.290504  447261.135628   가능  영업/정상  2024-02-01  지선  \n",
-       "4  204151.555648  441769.083699   가능  영업/정상  2024-02-01  지선  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 자기 이름을 입력해서 잘 돌아가나 봅니다. \n",
-    "지선.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 위에서 생성한 데이터프레임들\n",
-    "지은.to_excel('지은.xlsx', index=False)\n",
-    "정훈.to_excel('정훈.xlsx', index=False)\n",
-    "해민.to_excel('해민.xlsx', index=False)\n",
-    "지선.to_excel('지선.xlsx', index=False)"
+    "# div = len(res_df)//4\n",
+    "\n",
+    "# 지은 = res_df[:div].reset_index(drop=True)\n",
+    "# 정훈 = res_df[div:div*2].reset_index(drop=True)\n",
+    "# 해민 = res_df[div*2:div*3].reset_index(drop=True)\n",
+    "# 지선 = res_df[div*3:].reset_index(drop=True)\n",
+    "\n",
+    "# 지은['담당자'] = '지은'\n",
+    "# 정훈['담당자'] = '정훈'\n",
+    "# 해민['담당자'] = '해민'\n",
+    "# 지선['담당자'] = '지선'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # 자기 이름을 입력해서 잘 돌아가나 봅니다. \n",
+    "# 지선.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # 위에서 생성한 데이터프레임들\n",
+    "# 지은.to_excel('지은.xlsx', index=False)\n",
+    "# 정훈.to_excel('정훈.xlsx', index=False)\n",
+    "# 해민.to_excel('해민.xlsx', index=False)\n",
+    "# 지선.to_excel('지선.xlsx', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "restaurant_info_data 안에 있는 엑셀 파일을 담당자 이름을 붙여서 한 개의 엑셀 파일로 코딩"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "folder_path = 'D:/파이썬/data/data/restaurant_info_data(2)/restaurant_info_data'  # 폴더 경로를 지정해주세요.\n",
+    "\n",
+    "# 폴더 내 모든 파일의 이름을 읽어오기\n",
+    "file_names = []\n",
+    "for file in os.listdir(folder_path):\n",
+    "    if os.path.isfile(os.path.join(folder_path, file)):\n",
+    "        file_names.append(os.path.join(folder_path, file))\n",
+    "\n",
+    "# 각 파일에 대해 처리\n",
+    "for file_name in file_names:\n",
+    "    # xlsx 파일을 DataFrame으로 읽어옴\n",
+    "    df = pd.read_excel(file_name)\n",
+    "    \n",
+    "    # '담당'이라는 새로운 컬럼을 추가하고 tags 값을 할당\n",
+    "    tag = file_name.split(\"restaurant_tag_df_\")[1][:2]\n",
+    "    df['담당'] = tag\n",
+    "    \n",
+    "    # 새로운 DataFrame을 같은 파일에 덮어쓰기\n",
+    "    df.to_excel(file_name, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "모든 xlsx 파일을 res_info_data.xlsx로 병합했습니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# 폴더 내 모든 파일의 이름을 읽어오기\n",
+    "file_names = []\n",
+    "for file in os.listdir(folder_path):\n",
+    "    if os.path.isfile(os.path.join(folder_path, file)) and file.endswith('.xlsx'):\n",
+    "        file_names.append(os.path.join(folder_path, file))\n",
+    "\n",
+    "# 모든 엑셀 파일을 읽어서 DataFrame으로 저장\n",
+    "dfs = []\n",
+    "for file_name in file_names:\n",
+    "    df = pd.read_excel(file_name)\n",
+    "    dfs.append(df)\n",
+    "\n",
+    "# 모든 DataFrame을 합치기\n",
+    "merged_df = pd.concat(dfs, ignore_index=True)\n",
+    "\n",
+    "# 결과를 하나의 엑셀 파일로 저장\n",
+    "output_file_path = 'res_info_data.xlsx'\n",
+    "merged_df.to_excel(output_file_path, index=False)\n",
+    "\n",
+    "print(f\"모든 xlsx 파일을 {output_file_path}로 병합했습니다.\")"
    ]
   }
  ],
