docs : sql 컬럼명 기준 파일 추가

--- a/naver_매장존재확인_크롤링.ipynb
+++ b/naver_매장존재확인_크롤링.ipynb
@@ -2051,8 +2051,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "어디까지 되나 하는 중 300개씩 21에서 ooutofmemory, 300개당 12분에서 20분으로 늘 "
+    "SQL 컬럼명 변경"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
